src/index.css
@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --font-sora: "Sora", sans-serif;
  --font-code: "Source Code Pro", monospace;
  --font-grotesk: "Space Grotesk", sans-serif;
  color-scheme: dark;
}

* {
  scroll-behavior: smooth;
}

@layer base {
    body {
        @apply font-sans bg-n-8 text-n-1 text-base;
    }

    button {
        cursor: pointer;
    }
}

@keyframes fadeIn {
  0%{
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.animate-fadeIn {
  animation: fadeIn 4s ease-in-out;
}

.animate-fadeIn-2 {
  animation: fadeIn 3s ease-in-out;
}

.swiper-pagination-bullet {
  background-color: #fff;
  opacity: 0.5;
}

/* Position of the bullets */
.swiper-pagination {
  transform: translateY(-250%);
}
.swiper-pagination-bullet-active {
  background-color: #FF6666;
  opacity: 1;
}
/* Color of the Carousel Arrows */
.swiper-button-prev, .swiper-button-next {
  z-index: 1;
}

/* Style for Cards */
.custom-pagination .swiper-pagination {
  transform: translateY(20%);
}
.custom-pagination .swiper-pagination-bullet {
  background-color: #0E0C15;
  opacity: 0.5;
}
.custom-pagination .swiper-pagination-bullet-active {
  background-color: #FF6666;
  opacity: 1;
}

